repairs to overflow in places section

--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,26 +1,3 @@
 .photo-grid__item {
   max-width: 100%;
-  /*max-height: 100%;*/
-  min-height: 213px;
-}
-
-@media screen and (max-width: 1140px) {
-  .photo-grid__item {
-    max-height: 100%;
-      min-height: 225px;
-  }
-}
-
-@media screen and (max-width: 958px) {
-  .photo-grid__item {
-    max-height: 100%;
-      min-height: 264px;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .photo-grid__item {
-    max-height: 100%;
-      min-height: 216px;
-  }
 }
