--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,33 +1,34 @@
 @import url(./__item/photo-grid__item.css);
 
 .photo-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    grid-column-gap: 16px;
-    grid-row-gap: 16px;
-    max-width: 100%;
-    margin-bottom: 80px;
-    justify-items: center;
-  }
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  max-width: 100%;
+  margin-bottom: 80px;
+}
 
 @media screen and (max-width: 1140px) {
-    .photo-grid {
-       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-       grid-column-gap: 14px;
-      }
+  .photo-grid {
+    margin: 0 auto 80px auto;
+    max-width: 928px;
+    grid-column-gap: 14px;
+    grid-row-gap: 14px;
+  }
 }
-  
+
 @media screen and (max-width: 958px) {
-    .photo-grid {
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-        grid-column-gap: 12px;
-        grid-row-gap: 12px;
-      }
+  .photo-grid {
+    max-width: 720px;
+    margin: 0 auto 80px auto;
+  }
 }
-  
+
 @media screen and (max-width: 425px) {
-    .photo-grid {
-        grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-        margin-bottom: 64px;
-      }
+  .photo-grid {
+    max-width: 288px;
+    margin: 0 auto 64px auto;
+    grid-row-gap: 12px;
+  }
 }
