--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,25 +1,26 @@
 .place__paragraphs {
     padding-top: 32px;
-    max-width: 484px;
+    max-width: 100%;
+    /*484*/
   }
 
   @media screen and (max-width: 1140px) {
       .place__paragraphs {
         padding-top: 32px;
-        max-width: 456px;
+        max-width: 100%;
       }
 }
 
 @media screen and (max-width: 958px) {
     .place__paragraphs {
       padding-top: 26px;
-      max-width: 352px;
+      max-width: 100%;
     }
 }
 
 @media screen and (max-width: 425px) {
     .place__paragraphs {
       padding-top: 12px;
-      max-width: 320px;
+      max-width: 100%;
     }
 }
