--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -21,7 +21,8 @@
 
   @media screen and (max-width: 1140px) {
       .place {
-        grid-template-columns: 440px 1fr;
+        grid-template-columns: repeat(2, 1fr);
+        /*grid-template-columns: 440px 1fr;*/
         grid-column-gap: 32px;
         margin-bottom: 80px;
       }
@@ -29,7 +30,8 @@
 
 @media screen and (max-width: 958px) {
     .place {
-      grid-template-columns: 340px 1fr;
+      /*grid-template-columns: 340px 1fr;*/
+      grid-template-columns: repeat(2, 1fr);
       grid-column-gap: 28px;
       margin-bottom: 146px;
     }
